modal div removed - now built through separate htmlfile

--- a/www/main.html
+++ b/www/main.html
@@ -59,7 +59,8 @@
 
 <!-- main elements to provide a modal window in the UI -->
 <div class="md-modal " id="modal-window">
-	<div class="md-content">
+	<div id="md-content" class="md-content">
+		<!--
 		<div id="modal-title">
 		</div>
 		<div id="modal-text">
@@ -68,6 +69,7 @@
 			<button id="modal-btn-cancel" value="cancel" >Cancel</button>
 			<button id="modal-btn-ok" value="ok" >OK</button> 
 		</span>
+		-->
 	</div>
 </div>
 
