fix - text formatting

--- a/www/keys.html
+++ b/www/keys.html
@@ -2,7 +2,7 @@
 	
 	
 	<h2>SSH Keys</h2>
-		<p>SSH keys are available on this host to push to the nodes in the cluster. Once the public key
+		<p>SSH keys are available on this host to push to the nodes in the cluster. Once the public key<br>
 		has been distributed, disks on the nodes can be discovered and formatted as gluster bricks.</p>
 		<input type="radio" name="passwordMethod" value="generic" checked="checked" onclick="togglePassword('generic');">Use a generic password for all hosts/nodes&nbsp;
 		  <span >
