added replica3 support to the UI

--- a/www/volCreate.html
+++ b/www/volCreate.html
@@ -39,6 +39,7 @@
 				Replica Count:&nbsp;
 				<select id="replicaCountInput" disabled >
 					<option>2</option>
+					<option>3</option>
 				</select>
 			</span>
 			<!-- commented out for now!
